--- a/appinventor/components/build.xml
+++ b/appinventor/components/build.xml
@@ -161,6 +161,7 @@
         <pathelement location="${lib.dir}/osmdroid/osmdroid-5.6.6.jar" />
         <pathelement location="${lib.dir}/jts/jts-core-1.15.0-20170823.040415-301.jar" />
         <pathelement location="${lib.dir}/androidsvg/androidsvg-d4ec6d8.jar" />
+	<pathelement location="${lib.dir}/bouncycastle/bcprov-jdk15on-157.jar" />
       </classpath>
     </ai.javac5>
 
@@ -293,6 +294,7 @@
           <pathelement location="${lib.dir}/osmdroid/osmdroid-5.6.6.jar" />
           <pathelement location="${lib.dir}/jts/jts-core-1.15.0-20170823.040415-301.jar" />
           <pathelement location="${lib.dir}/androidsvg/androidsvg-d4ec6d8.jar" />
+          <pathelement location="${lib.dir}/bouncycastle/bcprov-jdk15on-157.jar" />
         </classpath>
         <compilerarg line="-processorpath ${local.build.dir}/AnnotationProcessors.jar"/>
         <compilerarg line="-processor @{apt-processor}" />
